# sovereign-desktop

./: .gitignore  .prettierignore  CLAUDE.md  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prettier.config.js  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
src/: main.ts  onboarding.ts  store.ts  styles.css  validate.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/__tests__/: validate.test.ts
